<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enemy_hp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/enemy_s_hp"
            android:textSize="15sp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/players_hp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/player_s_hp"
            android:textSize="15sp"
            android:gravity="end"/>
    </LinearLayout>


        <TextView
            android:id="@+id/information_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/greeting_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <TextView
        android:id="@+id/action_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/action_question"
        android:textAlignment="center" />
    <Button
        android:id="@+id/action_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attack" />

    <Button
        android:id="@+id/action_button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/potion"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="353dp" />

    <Button
        android:id="@+id/action_button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_away" />
    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>